Added localStorage functionality
Append childs to the list whenever submit is clicked after some validations.
Displays the local storage details whenever refreshed .

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
+      <ul id="users" style="margin-top:20px;">
+        <li class=item><h3 style="text-align: center;">Added Users</h3></li>
+      </ul>
 
       <!-- <ul class="items">
         <li class="item">Item 1</li>
@@ -37,6 +39,6 @@
     </section>
     
 
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
